--- a/vendor.conf
+++ b/vendor.conf
@@ -10,7 +10,6 @@ github.com/docker/distribution b38e5838b7b2f2ad48e06ec4b500011976080621
 github.com/docker/docker 4310f7da7e6bcd8185bf05e032f9b7321cfa6ea2
 github.com/docker/docker-credential-helpers v0.5.1
 github.com/docker/go d30aec9fd63c35133f8f79c3412ad91a3b08be06 #?
-github.com/docker/go-connections e15c02316c12de00874640cd76311849de2aeed5
 github.com/docker/go-events 18b43f1bc85d9cdd42c05a6cd2d444c7a200a894
 github.com/docker/go-units 9e638d38cf6977a37a8ea0078f3ee75a7cdb2dd1
 github.com/docker/libtrust 9cbd2a1374f46905c68a4eb3694a130610adc62a
@@ -46,3 +45,4 @@ golang.org/x/text f72d8390a633d5dfb0cc84043294db9f6c935756
 golang.org/x/time a4bde12657593d5e90d0533a3e4fd95e635124cb
 google.golang.org/grpc v1.0.4
 gopkg.in/yaml.v2 4c78c975fe7c825c6d1466c42be594d1d6f3aba6
+github.com/docker/go-connections 8200ea8bb94cd6f3f448f690ca1275d6f5f3a1b1 https://github.com/ishidawataru/go-connections.git
